Income taxes: remove auto-calculation: https://app.asana.com/0/23545671914133/68400593508244 Income taxes: hide NOA years when annual taxable income is provided: https://app.asana.com/0/23545671914133/68400593508242 Employment history: auto-create previous employment when history below 3 years: https://app.asana.com/0/23545671914133/68400593508236 Applicant cards: fix cards not taking up full width on mobile

--- a/app/styles/components/applicant-card.styl
+++ b/app/styles/components/applicant-card.styl
@@ -19,7 +19,8 @@ $applicantCardMaxWidth ?= 40em
 		+media-query($breakpointMain)
 			display block
 	+media-query($breakpointMain)
-		max-width inherit
+		&, &-card
+			max-width inherit !important
 		&s &, &s &-card, &-summary &-card
 			display block
 	&-card
