--- a/app/styles/layout/layout.styl
+++ b/app/styles/layout/layout.styl
@@ -75,3 +75,7 @@ main
 	&-summary
 		+media-query($breakpointMain)
 			margin $margin
+.intro-help
+	padding 2em 3em
+	max-width 55em
+	margin 0 auto
